@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-06T00:48:03Z",
+  "timestamp" : "2022-10-07T00:59:43Z",
   "count_outdated" : 0,
   "uniques_outdated" : 0,
-  "count" : 23,
-  "uniques" : 2,
+  "count" : 31,
+  "uniques" : 3,
   "views" : [
     {
       "timestamp": "2022-10-05T00:00:00Z",
@@ -11,6 +11,13 @@
       "count_minmax": [ 23, 23 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-10-06T00:00:00Z",
+      "count": 8,
+      "count_minmax": [ 8, 8 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
