@@ -1,11 +1,16 @@
 {
-  "count": 23,
+  "count": 31,
   "uniques": 2,
   "views": [
     {
       "timestamp": "2022-10-05T00:00:00Z",
       "count": 23,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-10-06T00:00:00Z",
+      "count": 8,
+      "uniques": 1
     }
   ]
 }
