@@ -1,7 +1,15 @@
+2022-10-07T00:59:43Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-builds/andry81-builds/actions/runs/3201498982
+* notice: last 14d: unq all: 2 31
+* notice: prev accum: outdated-unq outdated-all / unq all: 0 0 / 2 23
+* notice: next accum: outdated-unq outdated-all / unq all: 0 0 / 3 31
+* notice: prev exec diff / last date diff / accum: unq all: +1 +8 -0 -0 / +1 +8 -0 -0 / 1 8
+* notice: removed / changed dates: [] / [2022-10-06]
+
 2022-10-06T00:48:03Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-builds/andry81-builds/actions/runs/3193714022
 * notice: last 14d: unq all: 2 23
 * notice: prev accum: outdated-unq outdated-all / unq all: 0 0 / 0 0
 * notice: next accum: outdated-unq outdated-all / unq all: 0 0 / 2 23
 * notice: prev exec diff / last date diff / accum: unq all: +2 +23 -0 -0 / +2 +23 -0 -0 / 2 23
-* notice: removed / changed dates: [] / [2022-10-05]
+* notice: removed / changed dates: [] / [2022-10-05]
